--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -3,7 +3,6 @@ html {
 }
 
 section {
-  margin: 20px 0 0 0;
   height: 85vh;
   width: 100vw;
   display: flex;
@@ -20,11 +19,9 @@ section {
 /* Portfolio */
 
 #form-bg-container {
+  margin-top: 30vw;
   position: absolute;
   width: 95%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   border-radius: 1rem;
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(5px);
@@ -57,6 +54,7 @@ section {
 @media (min-width: 720px) {
   #form-bg-container {
     width: 638.4px;
+    margin-top: 5vw;
   }
   .form-container {
     width: 638.4px;
